--- a/templates/pages/default.html.twig
+++ b/templates/pages/default.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
 
 {% block content %}
-{{dump(content)}}
+    {% include 'layout/content-blocks.html.twig' %}
 {% endblock %}
