--- a/assets/frontend/scss/components/_btn.scss
+++ b/assets/frontend/scss/components/_btn.scss
@@ -5,18 +5,16 @@ Buttons
 Contains the styles for all the buttns on the site.
 
 */
-@use '../abstracts';
-
 .btn {
-    @each $color-name, $color-value in abstracts.$theme-colors {
+    @each $color-name, $color-value in $theme-colors {
         &.btn-outline-#{$color-name} {
-            color: abstracts.$btn-color;
+            color: $btn-color;
         }
     }
     // Arrow buttons
     &:has(.icon) {
         display: inline-flex;
-        gap: abstracts.px-to-rem(10);
+        gap: px-to-rem(10);
         align-items: center;
     }
 
@@ -24,6 +22,6 @@ Contains the styles for all the buttns on the site.
     &.btn-link {
         padding: 0;
         border: none;
-        margin: abstracts.px-to-rem(5);
+        margin: px-to-rem(5);
     }
 }
