refactor(sass): Color changes

--- a/assets/frontend/scss/base/_base.scss
+++ b/assets/frontend/scss/base/_base.scss
@@ -6,3 +6,10 @@ Contains common syles for the entire page
 
 */
 
+@font-face {
+  font-family: 'New Spirit';
+  src: url('../../fonts/new-spirit.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap; 
+}
