--- a/templates/pages/default.html.twig
+++ b/templates/pages/default.html.twig
@@ -2,4 +2,6 @@
 
 {% block content %}
     {% include 'layout/content-blocks.html.twig' %}
+    <h1>Hello, world!</h1>
+    <p>Welcome to your new page.</p>
 {% endblock %}
