--- a/assets/frontend/scss/abstracts/_overrides.scss
+++ b/assets/frontend/scss/abstracts/_overrides.scss
@@ -24,11 +24,12 @@ $black: #000;
 $light: #f8f9fa;
 $dark: #343a40;
 
-$primary: #272044;
-$secondary: #8057e3;
-$tertiary: #39457B;
-$quaternary: #BE94A3;
-$quinary: #f6F1E4;
+$primary: #1B162C; //Text
+$secondary: #FBF8F0;
+$tertiary: #DDCFEB;
+$quaternary: #F4C5C2;
+$quinary: #E6E8C0;
+$senary: #E6EFEC;
 
 $theme-colors: (
     'primary': $primary,
@@ -39,9 +40,9 @@ $theme-colors: (
 );
 
 // Typography
-$headings-color: $secondary;
-$font-family-base: "IBM Plex Mono", monospace; // Paragraph font family
-$headings-font-family: "Menbere", sans-serif; // Heading font family
+$headings-color: $primary;
+$headings-font-family: 'New Spirit', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+$font-family-base: "IBM Plex Mono", monospace; 
 $font-size-base: px-to-rem(16);
 // Font sizes
 $h1-font-size: $font-size-base * 3.7222; // 67px
@@ -76,7 +77,7 @@ $container-gutter-x: 20px;
 
 
 // Body
-$body-bg: $quinary;
+$body-bg: $secondary;
 $body-color: $primary;
 
 
@@ -100,4 +101,4 @@ $card-spacer-y: $card-spacer-x;
 
 //Links
 $link-decoration: none;
-$link-color: $secondary;
+$link-color: $tertiary;
