--- a/assets/frontend/scss/main.scss
+++ b/assets/frontend/scss/main.scss
@@ -21,5 +21,6 @@ Import all the necessary SCSS files to compile the final CSS.
 @import 'components/btn';
 
 // Layout
+@import 'layout/header-main';
 
 // Pages
