--- a/templates/layout/content-blocks.html.twig
+++ b/templates/layout/content-blocks.html.twig
@@ -1,25 +1,12 @@
 {% if content.content_blocks|default(null) %}
-{% for content_block in content.content_blocks %}
+	{% for content_block in content.content_blocks %}
+		{% set spacing = content_block.settings.spacing_options|default(null) %}
+		{% set container_small = content_block.settings.container_small|default(null) %}
 
-{% set spacing = content_block.settings.spacing_options|default(null) %} 
-{% set container_small = content_block.settings.container_small|default(null) %}
-{% set default_spacing = null %}
-
-{# By default small spacing for news articles, but still editable  #}
-    {% if content.article is defined and spacing is null %}
-    {% set default_spacing = 'small' %}
-    {% endif %}
-
-{# By default small container for news articles, but still editable  #}
-{% if content.article is defined and container_small is null %}
-{% set container_small = true %}
-{% endif %}
-
-<section
-    class="content-block-{{ content_block.type }} spacer-top{{ default_spacing ? '--' ~ default_spacing : spacing ? '--' ~ spacing : " " }} ">
-    <div class="container {% if container_small %}container-small{% endif %}">
-        {% include 'content-blocks/' ~ content_block.type ~ '.html.twig' with { content_block: content_block } %}
-    </div>
-</section>
-{% endfor %}
+		<section class="content-block-{{ content_block.type }} spacer-top{{ spacing ? '--' ~ spacing : " " }} ">
+			<div class="container {% if container_small %}container-small{% endif %}">
+				{% include 'content-blocks/' ~ content_block.type ~ '.html.twig' with { content_block: content_block } %}
+			</div>
+		</section>
+	{% endfor %}
 {% endif %}
