feat(blocks): Logos on header

--- a/templates/layout/header-main.html.twig
+++ b/templates/layout/header-main.html.twig
@@ -1,9 +1,10 @@
 <header class="header-main d-flex align-items-center">
 	<div class="container header-main-container d-flex align-items-center justify-content-between">
 		{% block header %}
-			<p class="m-0">Isabelle Anno</p>
+			{# Logo #}
+			{% include 'components/logo.html.twig'  with {clickable : true}  %}
+			{# Main nav #}
 			{% include 'layout/navigation/main-nav.html.twig' %}
-
 		{% endblock %}
 	</div>
 </header>
