--- a/assets/frontend/scss/layout/_header-main.scss
+++ b/assets/frontend/scss/layout/_header-main.scss
@@ -1,5 +1,5 @@
 .header-main {
-  min-height: px-to-rem(80);
+  height: px-to-rem(80);
   border-bottom: 1px solid $primary;
   background-color: #fef5ee;
 }
