--- a/assets/frontend/scss/main.scss
+++ b/assets/frontend/scss/main.scss
@@ -19,6 +19,7 @@ Import all the necessary SCSS files to compile the final CSS.
 
 // Components
 @import "components/btn";
+@import "components/logo";
 
 // Layout
 @import "layout/component-blocks";
