--- a/templates/layout/navigation/main-nav.html.twig
+++ b/templates/layout/navigation/main-nav.html.twig
@@ -1,16 +1,23 @@
 <ul class="main-nav navbar-nav d-flex flex-row align-items-center justify-content-between">
 	{% block main_nav_items %}
-		{% for item in sulu_navigation_root_tree('main', 2) %}
-			{% set is_active = (uuid is defined and uuid == item.uuid) %}
-			<li class="nav-item  {{ item.children ? 'has-children' }}">
-				<sulu-link class="nav-link d-flex align-items-center {% if is_active %} active{% endif %}" href="{{ item.uuid }}" title="{{ item.title }}">{{
-                item.title
-                }}</sulu-link>
-				{% if item.children %}
-					{% include 'layout/navigation/nav-children.html.twig' %}
-				{% endif %}
-			</li>
-		{% endfor %}
-		<a href="#" class="btn btn-primary">Learn More</a>
+		{# Desktop #}
+		<div class="d-none d-xl-flex">
+			{% include 'layout/navigation/nav-contents.html.twig' %}
+		</div>
+		{# Mobile #}
+		<button class="navbar-toggler d-flex align-items-center text-primary d-xl-none" data-bs-toggle="offcanvas" href="#offcanvasNav" role="button" aria-controls="offcanvasNav">
+			{% include 'utilities/icon.html.twig' with {
+				icon: 'hamburger-icon'
+			} %}
+		</button>
+		<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNav" aria-labelledby="offcanvasNavLabel">
+			<div class="offcanvas-header">
+				<h5 class="offcanvas-title" id="offcanvasNavLabel">Offcanvas</h5>
+				<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+			</div>
+			<div class="offcanvas-body">
+				{% include 'layout/navigation/nav-contents.html.twig' %}
+			</div>
+		</div>
 	{% endblock %}
 </ul>
