feat(blocks): Column block
feat(blocks): Column block

--- a/config/templates/layout/content-blocks.xml
+++ b/config/templates/layout/content-blocks.xml
@@ -35,6 +35,17 @@
                                 />
                             </properties>
                         </type>
+                        <type name="columns">
+                            <meta>
+                                <title lang="en">Columns</title>
+                            </meta>
+                            <properties>
+                                <xi:include
+                                href="./../content-blocks/columns.xml"
+                                xpointer="xmlns(sulu=http://schemas.sulu.io/template/template) xpointer(/sulu:template/sulu:properties/sulu:*)"
+                                />
+                            </properties>
+                        </type>
                     </types>
                 </block>
             </properties>
