--- a/assets/frontend/scss/base/_base.scss
+++ b/assets/frontend/scss/base/_base.scss
@@ -1,4 +1,4 @@
- /*
+/*
 
 Base
 ================================================== 
@@ -7,9 +7,9 @@ Contains common syles for the entire page
 */
 
 @font-face {
-  font-family: 'New Spirit';
-  src: url('../../fonts/new-spirit.otf') format('opentype');
+  font-family: "BW Gradual";
+  src: url("../../fonts/BwGradual.otf") format("opentype");
   font-weight: normal;
   font-style: normal;
-  font-display: swap; 
+  font-display: swap;
 }
