--- a/assets/frontend/scss/layout/_header-main.scss
+++ b/assets/frontend/scss/layout/_header-main.scss
@@ -1,7 +1,6 @@
 .header-main {
   height: px-to-rem(80);
-  border-bottom: 1px solid $primary;
-  background-color: #fef5ee;
+  background-color: transparent;
 }
 
 .main-nav {
