feat(blocks): Create hero and areas of expertise blocks for home page

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,7 +34,7 @@
 		{# Content #}
 		<main class="main-content"> {% block content %}{% endblock %}
 			</main>
-
+			{{dump()}}
 			{# Footer #}
 			{% include 'layout/footer-main.html.twig' %}
 
