--- a/templates/pages/homepage.html.twig
+++ b/templates/pages/homepage.html.twig
@@ -2,4 +2,5 @@
 
 {% block content %}
 	{% include './content-blocks/homepage/hero.html.twig' %}
+	{% include './content-blocks/homepage/areas-of-expertise.html.twig' %}
 {% endblock %}
