--- a/assets/frontend/scss/layout/_header-main.scss
+++ b/assets/frontend/scss/layout/_header-main.scss
@@ -1,18 +1,14 @@
 $header-height: px-to-rem(60);
 
-.header-main,
-.header-main-container {
+.header-main {
+  position: absolute;
   height: $header-height;
-}
-
-.header-main-container {
-  position: fixed;
-  left: 0;
   width: 100%;
-  color: white;
-  z-index: 1000;
 }
 
 .main-nav {
   gap: px-to-rem(25);
+  .nav-link {
+    color: white;
+  }
 }
