--- a/templates/content-blocks/homepage/hero.html.twig
+++ b/templates/content-blocks/homepage/hero.html.twig
@@ -1,8 +1,17 @@
 <section class="hero bg-{{content.hero.background_color}}">
-	{% include 'components/header.html.twig'  
-    with {
-    'headerSize': content.hero.header_size, 
-    'content': content.hero.header, 
-    'headerColor': content.hero.header_color
-    }  %}
+	<div class="container container-{{content.hero.settings.spacing_options}}">
+		<div class="row">
+			<div class="col-6">
+				{% include 'components/header.html.twig'  
+                    with {
+                    'headerSize': content.hero.header_size, 
+                    'content': content.hero.header, 
+                    'headerColor': content.hero.header_color
+                }  %}
+			</div>
+			<div class="col-6 d-flex align-items-center">
+				<div class="col-10 h-75 bg-secondary"></div>
+			</div>
+		</div>
+	</div>
 </section>
