feat(blocks): Text on hero fixed

--- a/assets/frontend/scss/abstracts/_utilities.scss
+++ b/assets/frontend/scss/abstracts/_utilities.scss
@@ -5,6 +5,13 @@
  Custom Utility classes 
 
  */
-.code {
+
+.manrope {
+  font-family: "Manrope", sans-serif;
+}
+.fira-code {
   font-family: "Fira Code", monospace;
+}
+.text-gray-200 {
+  color: $gray-200;
 }
