--- a/templates/layout/header-main.html.twig
+++ b/templates/layout/header-main.html.twig
@@ -1,4 +1,4 @@
-<header class="header-main d-flex align-items-center">
+<header class="header-main header-overlay d-flex align-items-center">
 	<div class="container">
 		<div class="row">
 			{% block header %}
