--- a/templates/layout/content-blocks.html.twig
+++ b/templates/layout/content-blocks.html.twig
@@ -1,10 +1,12 @@
+{# This file defines a standardized section and container for each content block, based on its type. #}
+
+
 {# Flexible content where order is movable #}
-{% if flexible_content is defined and flexible_content is not empty %}
-	{% for content_block in flexible_content %}
+	{% if flexible_content is defined and flexible_content is not empty %}
+		{% for content_block in flexible_content %}
 		{% set spacing = content_block.settings.spacing_options|default(null) %}
 
-		<section class="content-block-{{ content_block.type }} spacer-top{{ spacing ? '--' ~ spacing : " " }} ">
-			<div class="container container-{{content_block.settings.spacing_options}}">
+			<section class="content-block-{{ content_block.type }} spacer-top{{ spacing ? '--' ~ spacing : " " }} "> <div class="container container-{{content_block.settings.spacing_options}}">
 				{% include 'content-blocks/flexible/' ~ content_block.type ~ '.html.twig' with { flexible_content: content_block } %}
 			</div>
 		</section>
